Added test and classes for refactoring

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -19,11 +19,12 @@ body {
   margin: 5px;
   padding: 2px;
   border: 1px solid red;
+  width: 100%;
+  max-width: 400px;
 }
 
 .block-entry {
   display: flex;
-  width: 300px;
 }
 
 .block-entry > * + * {
@@ -88,9 +89,45 @@ body {
 }
 
 /*-----------------------------------*/
+/*-----------INFO CONTAINER----------*/
+/*-----------------------------------*/
+
+.info-container {
+  display: inline-grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+/*-----------------------------------*/
 /*-----------TRANSACTIONS------------*/
 /*-----------------------------------*/
 
-.transactions {
+.transactions,
+.peers {
   font-family: "Courier New", Courier, monospace;
+  width: 500px;
+}
+
+table {
+  table-layout: fixed;
+  border: 2px solid black;
+  width: 100%;
+}
+
+tr {
+  white-space: nowrap;
+}
+
+td {
+  display: inline-block;
+  border-right: 1px solid black;
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+tr td:last-child {
+  border: none;
 }
