--- a/views/components/block.ejs
+++ b/views/components/block.ejs
@@ -27,13 +27,16 @@
     </div>
     <div class="block-entry">
       <p class="block-label">Hash:</p>
-      <p class="block-value block-hash-value"><%= blocks[i].hash %></p>
+      <p class="block-value block-hash-value"><%= blocks[i].hash() %></p>
     </div>
-    <div class="block-entry block-entry-btn">
-      <button class="btn-mine">Mine</button>
-    </div>
-    <div class="block-entry block-entry-btn">
-      <button class="btn-mine-onwards">Mine onwards</button>
-    </div>
+    <!--
+      <div class="block-entry block-entry-btn">
+        <button class="btn-mine">Mine</button>
+      </div>
+      <div class="block-entry block-entry-btn">
+        <button class="btn-mine-onwards">Mine onwards</button>
+      </div>
+
+    -->
   </div>
 </div>
