--- a/views/components/transaction.ejs
+++ b/views/components/transaction.ejs
@@ -4,5 +4,7 @@
   <td><%= transaction.sender %></td>
   <td><%= transaction.receiver %></td>
   <td><%= transaction.amount %></td>
+  <td><%= transaction.timestamp %></td>
+  <td><%= transaction.signature %></td>
 </tr>
 <% }) %>
