--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,133 +1,115 @@
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-}
-
-.blockchain {
-  display: inline-grid;
-  grid-auto-flow: column;
-  grid-gap: 30px;
-}
-
-.block-container {
-  border: 2px solid #333;
-  display: inline-grid;
-  grid-template-rows: 0.5fr 3fr;
-}
-
-.block-item {
-  margin: 5px;
-  padding: 2px;
-  border: 1px solid red;
-  width: 100%;
-  max-width: 400px;
-}
-
-.block-entry {
   display: flex;
 }
 
-.block-entry > * + * {
-  margin-left: 10px;
+.root {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
-.block-entry-tx {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 0px 10px;
-  margin-block-start: 10px;
-  margin-block-end: 10px;
-}
-
-.block-tx-label {
-  margin-block: 0px;
-  font-weight: bold;
-}
-
-.block-tx-value {
-  margin-block: 0px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.block-value {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.block-label {
-  font-weight: bold;
-}
-
-.block-entry-btn {
+.container-title {
+  display: flex;
   justify-content: center;
-  margin: 10px 0;
+  margin-bottom: 50px;
 }
 
-.btn-mine,
-.btn-mine-onwards {
-  flex: 0 0 120px;
-  min-height: 30px;
-
-  background-color: rgb(231, 229, 178);
-  color: #333;
-  border: none;
-  border-radius: 4px;
-  transition: 0.3s;
-}
-
-.btn-mine:hover,
-.btn-mine-onwards:hover {
-  font-size: medium;
-  color: white;
-  background-color: rgb(142, 138, 28);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/*-----------------------------------*/
-/*-----------INFO CONTAINER----------*/
-/*-----------------------------------*/
-
-.info-container {
+.container {
   display: inline-grid;
   grid-auto-flow: column;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 200px;
 }
 
-/*-----------------------------------*/
-/*-----------TRANSACTIONS------------*/
-/*-----------------------------------*/
+.container-actions {
+  display: grid;
+}
 
-.transactions,
-.peers {
-  font-family: "Courier New", Courier, monospace;
+.container-log {
   width: 500px;
-}
-
-table {
-  table-layout: fixed;
   border: 2px solid black;
-  width: 100%;
-}
-
-tr {
-  white-space: nowrap;
-}
-
-td {
-  display: inline-block;
-  border-right: 1px solid black;
-  width: 100%;
   text-align: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: grid;
+  grid-template-rows: 0.5fr 3fr;
 }
 
-tr td:last-child {
-  border: none;
+/*
+.log-title {
+  overflow: hidden;
+}*/
+
+.item-container-log {
+  position: relative;
+  margin: 10px;
+}
+
+.log {
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column-reverse;
+  position: absolute;
+  bottom: 0;
+  overflow: auto;
+}
+
+.log p {
+  margin: 0;
+}
+
+.item-row {
+  width: 400px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* ------ SCROLL BARS ----- */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(110, 110, 110);
+}
+
+/*------ BUTTONS------- */
+
+a {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a:visited {
+  color: inherit;
+}
+
+.set-up-button {
+  background-color: green;
+  color: white;
+}
+
+.set-up-button:hover {
+  background-color: white;
+  color: green;
+  border: 2px solid black;
 }
