--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <% if(typeof style !== 'undefined'){%>
+    <% if(typeof styles !== 'undefined'){ styles.map(style => { %>
     <link rel="stylesheet" href="/css/<%= style %>.css" />
-    <% } %>
+    <% }) } %>
     <title><%= title %></title>
   </head>
   <body>
