--- a/views/components/transaction.ejs
+++ b/views/components/transaction.ejs
@@ -1,4 +1,4 @@
-<% transactions.map(transaction =>{ %>
+<% transactions_validated.map(transaction =>{ %>
 <tr>
   <td><%= transaction.id %></td>
   <td><%= transaction.sender %></td>
