--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -70,3 +70,10 @@
     </div>
   </div>
 </div>
+
+<div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <p>Setting up the simulation. Please wait :)</p>
+  </div>
+</div>
