--- a/views/pages/transaction/index.ejs
+++ b/views/pages/transaction/index.ejs
@@ -1,6 +1,6 @@
 <div class="container-transactions">
   <div class="transactions">
-    <h1>Validated Transactions</h1>
+    <h1>Validated Transactions: <%=transactions_validated.length%></h1>
     <table>
       <thead>
         <tr>
