--- a/public/css/blockchain.css
+++ b/public/css/blockchain.css
@@ -49,6 +49,15 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  border-radius: 20px;
+  border: 2px solid black;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.block-tx-value:hover {
+  background-color: blue;
+  color: white;
 }
 
 .block-value {
